# c_text_rpg

./: CMakeLists.txt  Doxyfile  build.bash  build.bat
src/: armor.c  compatibility.c  game.c  main.c  player.c  vector.c  weapon.c
src/headers/: armor.h  compatibility.h  game.h  player.h  vector.h  weapon.h
